# cage

./: CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  SECURITY.md  cage.toml.example  clippy.toml  deny.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/cli-ux/: cli-ux-spec.md
docs/issue-approaches/: README.md  issue-01.md  issue-02.md  issue-03.md  issue-04.md  issue-05.md  issue-06.md  issue-07.md  issue-08.md  issue-09.md  issue-10.md  issue-11.md  issue-12.md  issue-13.md  issue-14.md  issue-15.md  issue-16.md  issue-17.md  issue-18.md  issue-19.md  issue-20.md  issue-21.md  issue-22.md  issue-23.md  issue-24.md  issue-25.md  issue-26.md  issue-27.md  issue-28.md  issue-29.md
docs/migration/: inventory.md
scripts/: check-workflow-triggers.rb  check_workflow_triggers_test.rb
src/: lib.rs  main.rs
src/adapter/: mod.rs
src/cli/: error.rs  mod.rs  output.rs
src/config/: loader.rs  mod.rs
src/engine/: mod.rs
src/security/: mod.rs  mount.rs  path.rs
src/session/: mod.rs
src/sync/: mod.rs
src/team/: mod.rs
tests/integration/: mod.rs
tests/integration/snapshots/: diff-help.txt  root-help.txt  run-help.txt  sync-help.txt
