[package]
name = "cage"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A universal sandbox CLI tool for safely running any AI coding agent"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Saber5656/cage"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
dirs = "6"
libc = "0.2"
regex = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
similar = { version = "2", features = ["text"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
dbg_macro = "deny"
expect_used = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
panic = "warn"
print_stderr = "warn"
todo = "warn"
unimplemented = "warn"
unwrap_used = "warn"
